Do not display the canvas during stiching to speed up the process

--- a/src/index.html
+++ b/src/index.html
@@ -65,8 +65,8 @@
     <div class="fill wrapper" >
 
         <div id="progressDiv" class="progressDiv" ></div>
-        <div id="mergedImageDiv" class="mergedImageDiv" >
-            <img id="mergedImage" alt="merged image" />
+        <div id="canvasDiv" class="canvasDiv" >
+            <canvas id="canvas" />
         </div>
 
         <div id="map" class="content"></div>
