Start to assemble the tiles in two parts, left and right, download them first, and merge them for the entire map

--- a/src/index.html
+++ b/src/index.html
@@ -69,6 +69,13 @@
             <canvas id="canvas" />
         </div>
 
+        <div id="canvasDivLeft" class="canvasDivLeft" >
+            <canvas id="canvasLeft" />
+        </div>
+        <div id="canvasDivRight" class="canvasDivRight" >
+            <canvas id="canvasRight" />
+        </div>
+
         <div id="map" class="content"></div>
         <canvas id="wMap-canvas" width="400" height="400" ></canvas> <!-- for debug -->
 
@@ -91,17 +98,11 @@
                         <dt>Map resolution:</dt>
                         <dd class="wsSlp wideSelect">
                             <select id="mapResolution">
-                                <option value="1">1280 x 1280</option>
                                 <option value="2">2560 x 2560</option>
-                                <option value="3">3840 x 3840</option>
                                 <option value="4">5120 x 5120</option>
-                                <option value="5">6400 x 6400</option>
                                 <option value="6">7680 x 7680</option>
-                                <option value="7">8960 x 8960</option>
                                 <option value="8">10,240 x 10,240</option>
-                                <option value="9">11,520 x 11,520</option>
                                 <option value="10">12,800 x 12,800</option>
-                                <option value="11">14,080 x 14,080</option>
                                 <option value="12" selected="selected">15,360 x 15,360</option>
                             </select><i class="fas fa-chevron-down"></i>
                         </dd>
