Save the Map Resolution value in the local storage

--- a/src/index.html
+++ b/src/index.html
@@ -97,13 +97,13 @@
                     <dl>
                         <dt>Map resolution:</dt>
                         <dd class="wsSlp wideSelect">
-                            <select id="mapResolution">
+                            <select id="mapResolution" data-model="mapResolution">
                                 <option value="2">2560 x 2560</option>
                                 <option value="4">5120 x 5120</option>
                                 <option value="6">7680 x 7680</option>
                                 <option value="8">10,240 x 10,240</option>
                                 <option value="10">12,800 x 12,800</option>
-                                <option value="12" selected="selected">15,360 x 15,360</option>
+                                <option value="12">15,360 x 15,360</option>
                             </select><i class="fas fa-chevron-down"></i>
                         </dd>
                         <dd>&nbsp;</dd>
