Save the user's  mapBox token in the local storage, and use it if exists

--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,12 @@
                         <div><dt>Max. height:</dt><dd class="unit" id="maxh"></dd><dd><abbr>m</abbr></dd></div>
                     </dl>
                 </div>
+
                 <div class="settings">
+                    <header><h4>MapBox token</h4><hr></header>
+                    <dl>
+                        <div><dd><input type="text" id="mapBoxToken" class="textInput" data-model="mapBoxToken" onChange="saveSettings()"></dd></div>
+                    </dl>
                     <header><h4>Size and scale</h4><hr></header>
                     <dl>
                         <dt>Map resolution:</dt>
