Save the Map Resolution in the local storage when the value changes

--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,7 @@
                     <dl>
                         <dt>Map resolution:</dt>
                         <dd class="wsSlp wideSelect">
-                            <select id="mapResolution" data-model="mapResolution">
+                            <select id="mapResolution" data-model="mapResolution" onChange="saveSettings()">
                                 <option value="2">2560 x 2560</option>
                                 <option value="4">5120 x 5120</option>
                                 <option value="6">7680 x 7680</option>
