Aligned the Save button with the MapBox token field

--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,7 @@
                         <dd>
                             <div class="mapBoxTokenGroup">
                                 <div class="inline-block-child"><input type="text" id="mapBoxToken" class="mapBoxToken" data-model="mapBoxToken"/></div>
-                                <div class="inline-block-child"><button onclick="saveMapBoxToken()">Save</button></div>
+                                <button class="save-button" onclick="saveMapBoxToken()">Save</button>
                             </div>
                         </dd>
                     </dl>
